<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_item_grid"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_gird"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title_grid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/placeholder_title"
                app:layout_constraintBottom_toBottomOf="@+id/imv_completed_grid"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imv_completed_grid" />

            <TextView
                android:id="@+id/tv_desc_grid"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/placeholder_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/tv_title_grid"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_grid" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imv_delete_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:contentDescription="text_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:srcCompat="@drawable/ic_delete" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imv_important_grid"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/text_important"
                app:layout_constraintBottom_toTopOf="@+id/imv_urgent_grid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/imv_completed_grid"
                app:shapeAppearance="@style/roundedImageViewRounded" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imv_urgent_grid"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/text_urgent"
                app:layout_constraintBottom_toTopOf="@+id/imv_delete_grid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/imv_important_grid"
                app:shapeAppearance="@style/roundedImageViewRounded" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/imv_completed_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/text_completed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>